# bmp2sysex

./: LICENSE  README.md  setup.cfg
.github/workflows/github-actions/: test.yml
ci/: __main__.py
src/bmp2sysex/: __main__.py
src/bmp2sysex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_bmp2sysex.py
