[metadata]
name = bmp2sysex
version = 0.0.1
author = Chigozie Nri
author_email = chigozie@gmail.com
description = A small package to convert 1-bit 16x16 bitmap images to SysEx messages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chigozienri/bmp2sysex
project_urls =
    Bug Tracker = https://github.com/chigozienri/bmp2sysex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pillow

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bmp2sysex = bmp2sysex.__main__:main
